--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div class="container">
       <input type="text" id="password" placeholder="Password" />
-      <button>Coppy Password</button>
+      <button onclick="copyPass()">Coppy Password</button>
     </div>
     <div>
       <button onclick="generatePass()">Generate Password</button>
@@ -39,6 +39,13 @@
         passwordBox.value = password;
         console.log(passwordBox);
       }
+
+      function copyPass() {
+        passwordBox.select();
+        navigator.clipboard.writeText(passwordBox.value);
+        alert("Password copied" + passwordBox.value);
+      }
+      console.log(copyPass);
     </script>
   </body>
 </html>
